Updates for v10 of paper.

--- a/figures/unified_DGE_vis_v2.ipynb
+++ b/figures/unified_DGE_vis_v2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "automatic-facing",
+   "id": "built-value",
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "comfortable-click",
+   "id": "eligible-funds",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "interstate-memory",
+   "id": "shared-racing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "sunrise-contrast",
+   "id": "foster-rolling",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "precise-wayne",
+   "id": "mexican-fruit",
    "metadata": {},
    "source": [
     "# Functions"
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "hungry-sleeve",
+   "id": "international-superior",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ignored-straight",
+   "id": "italian-presence",
    "metadata": {},
    "source": [
     "# Load data"
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "smart-width",
+   "id": "russian-gothic",
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "gentle-arrival",
+   "id": "interim-belly",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "closed-specific",
+   "id": "missing-timing",
    "metadata": {},
    "source": [
     "# Volcano plots"
@@ -245,7 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "sexual-inquiry",
+   "id": "concerned-currency",
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +275,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "metallic-schedule",
+   "id": "mechanical-tutorial",
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +305,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "statutory-reporter",
+   "id": "received-symposium",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "stone-discount",
+   "id": "occasional-essex",
    "metadata": {},
    "source": [
     "# Stacked barplots"
@@ -329,7 +329,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "classical-hazard",
+   "id": "historic-belarus",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,7 +355,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "aging-newfoundland",
+   "id": "affected-interference",
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "rural-yemen",
+   "id": "valued-butler",
    "metadata": {},
    "outputs": [
     {
@@ -499,7 +499,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "superb-notion",
+   "id": "latter-standing",
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +528,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "unlike-first",
+   "id": "included-channel",
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +568,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "amino-petersburg",
+   "id": "coordinate-monitor",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -579,13 +579,13 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "perceived-ottawa",
+   "id": "governing-custom",
    "metadata": {},
    "outputs": [],
    "source": [
     "assign(paste0(project[dset_idx], \"_mat_de_bplot\"), category_bplot)\n",
     "save(\n",
-    "    list = c(paste0(project[dset_idx], \"_mat_de_.Rda\")),\n",
+    "    list = c(paste0(project[dset_idx], \"_mat_de_bplot\")),\n",
     "    file = paste0(dirs$figures_dir, \"/saved_obj/\", dsets[dset_idx], \"_mat_de_bplots.RData\")\n",
     ")"
    ]
@@ -593,7 +593,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "visible-garlic",
+   "id": "large-stock",
    "metadata": {},
    "outputs": [],
    "source": []
