--- a/meta_analysis/enrichment_meta.ipynb
+++ b/meta_analysis/enrichment_meta.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "asian-lancaster",
+   "id": "amino-negotiation",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "-- \u001b[1mAttaching packages\u001b[22m ---------------------------------------------------------------------- tidyverse 1.3.0 --\n",
+      "-- \u001b[1mAttaching packages\u001b[22m ------------------------------------------------------------------------------- tidyverse 1.3.0 --\n",
       "\n",
       "\u001b[32mv\u001b[39m \u001b[34mggplot2\u001b[39m 3.3.3     \u001b[32mv\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4\n",
       "\u001b[32mv\u001b[39m \u001b[34mtibble \u001b[39m 3.0.6     \u001b[32mv\u001b[39m \u001b[34mdplyr  \u001b[39m 1.0.4\n",
       "\u001b[32mv\u001b[39m \u001b[34mtidyr  \u001b[39m 1.1.2     \u001b[32mv\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
       "\u001b[32mv\u001b[39m \u001b[34mreadr  \u001b[39m 1.4.0     \u001b[32mv\u001b[39m \u001b[34mforcats\u001b[39m 0.5.1\n",
       "\n",
-      "-- \u001b[1mConflicts\u001b[22m ------------------------------------------------------------------------- tidyverse_conflicts() --\n",
+      "-- \u001b[1mConflicts\u001b[22m ---------------------------------------------------------------------------------- tidyverse_conflicts() --\n",
       "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
       "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
       "\n"
@@ -34,17 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "activated-virgin",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "save_res <- TRUE"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "announced-popularity",
+   "id": "loaded-norman",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,8 +48,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "stylish-beginning",
+   "execution_count": 3,
+   "id": "filled-candy",
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +57,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m---------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  Division = \u001b[31mcol_character()\u001b[39m,\n",
       "  Category = \u001b[31mcol_character()\u001b[39m,\n",
@@ -84,7 +74,7 @@
       "\n",
       "\n",
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m---------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  type = \u001b[31mcol_character()\u001b[39m,\n",
       "  geneIDs = \u001b[31mcol_character()\u001b[39m,\n",
@@ -96,7 +86,7 @@
       "\n",
       "\n",
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m---------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  type = \u001b[31mcol_character()\u001b[39m,\n",
       "  geneIDs = \u001b[31mcol_character()\u001b[39m,\n",
@@ -108,7 +98,7 @@
       "\n",
       "\n",
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m---------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  type = \u001b[31mcol_character()\u001b[39m,\n",
       "  geneIDs = \u001b[31mcol_character()\u001b[39m,\n",
@@ -120,7 +110,7 @@
       "\n",
       "\n",
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m---------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  type = \u001b[31mcol_character()\u001b[39m,\n",
       "  geneIDs = \u001b[31mcol_character()\u001b[39m,\n",
@@ -132,7 +122,7 @@
       "\n",
       "\n",
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m---------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  type = \u001b[31mcol_character()\u001b[39m,\n",
       "  geneIDs = \u001b[31mcol_character()\u001b[39m,\n",
@@ -144,7 +134,7 @@
       "\n",
       "\n",
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m---------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  type = \u001b[31mcol_character()\u001b[39m,\n",
       "  geneIDs = \u001b[31mcol_character()\u001b[39m,\n",
@@ -183,8 +173,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "fewer-slope",
+   "execution_count": 4,
+   "id": "standard-stone",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +207,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "african-hierarchy",
+   "id": "prospective-insight",
    "metadata": {},
    "source": [
     "# FIGO"
@@ -225,7 +215,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "loving-sessions",
+   "id": "transsexual-prophet",
    "metadata": {},
    "source": [
     "## Proportion of total shared by all"
@@ -233,23 +223,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "exclusive-western",
+   "execution_count": 5,
+   "id": "chubby-distributor",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "908"
+       "974"
       ],
       "text/latex": [
-       "908"
+       "974"
       ],
       "text/markdown": [
-       "908"
+       "974"
       ],
       "text/plain": [
-       "[1] 908"
+       "[1] 974"
       ]
      },
      "metadata": {},
@@ -258,16 +248,16 @@
     {
      "data": {
       "text/html": [
-       "183"
+       "221"
       ],
       "text/latex": [
-       "183"
+       "221"
       ],
       "text/markdown": [
-       "183"
+       "221"
       ],
       "text/plain": [
-       "[1] 183"
+       "[1] 221"
       ]
      },
      "metadata": {},
@@ -276,16 +266,16 @@
     {
      "data": {
       "text/html": [
-       "0.201541850220264"
+       "0.226899383983573"
       ],
       "text/latex": [
-       "0.201541850220264"
+       "0.226899383983573"
       ],
       "text/markdown": [
-       "0.201541850220264"
+       "0.226899383983573"
       ],
       "text/plain": [
-       "[1] 0.2015419"
+       "[1] 0.2268994"
       ]
      },
      "metadata": {},
@@ -301,7 +291,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "gothic-pathology",
+   "id": "labeled-channel",
    "metadata": {},
    "source": [
     "## Proportion of top n shared by all"
@@ -309,23 +299,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "swiss-armor",
+   "execution_count": 11,
+   "id": "binary-certificate",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "17"
+       "34"
       ],
       "text/latex": [
-       "17"
+       "34"
       ],
       "text/markdown": [
-       "17"
+       "34"
       ],
       "text/plain": [
-       "[1] 17"
+       "[1] 34"
       ]
      },
      "metadata": {},
@@ -334,16 +324,16 @@
     {
      "data": {
       "text/html": [
-       "5"
+       "8"
       ],
       "text/latex": [
-       "5"
+       "8"
       ],
       "text/markdown": [
-       "5"
+       "8"
       ],
       "text/plain": [
-       "[1] 5"
+       "[1] 8"
       ]
      },
      "metadata": {},
@@ -352,16 +342,64 @@
     {
      "data": {
       "text/html": [
-       "0.294117647058824"
+       "<style>\n",
+       ".list-inline {list-style: none; margin:0; padding: 0}\n",
+       ".list-inline>li {display: inline-block}\n",
+       ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
+       "</style>\n",
+       "<ol class=list-inline><li>'extracellular matrix organization'</li><li>'extracellular structure organization'</li><li>'collagen-containing extracellular matrix'</li><li>'receptor ligand activity'</li><li>'signaling receptor activator activity'</li><li>'cytokine activity'</li><li>'growth factor activity'</li><li>'extracellular matrix structural constituent'</li></ol>\n"
       ],
       "text/latex": [
-       "0.294117647058824"
+       "\\begin{enumerate*}\n",
+       "\\item 'extracellular matrix organization'\n",
+       "\\item 'extracellular structure organization'\n",
+       "\\item 'collagen-containing extracellular matrix'\n",
+       "\\item 'receptor ligand activity'\n",
+       "\\item 'signaling receptor activator activity'\n",
+       "\\item 'cytokine activity'\n",
+       "\\item 'growth factor activity'\n",
+       "\\item 'extracellular matrix structural constituent'\n",
+       "\\end{enumerate*}\n"
       ],
       "text/markdown": [
-       "0.294117647058824"
+       "1. 'extracellular matrix organization'\n",
+       "2. 'extracellular structure organization'\n",
+       "3. 'collagen-containing extracellular matrix'\n",
+       "4. 'receptor ligand activity'\n",
+       "5. 'signaling receptor activator activity'\n",
+       "6. 'cytokine activity'\n",
+       "7. 'growth factor activity'\n",
+       "8. 'extracellular matrix structural constituent'\n",
+       "\n",
+       "\n"
       ],
       "text/plain": [
-       "[1] 0.2941176"
+       "[1] \"extracellular matrix organization\"          \n",
+       "[2] \"extracellular structure organization\"       \n",
+       "[3] \"collagen-containing extracellular matrix\"   \n",
+       "[4] \"receptor ligand activity\"                   \n",
+       "[5] \"signaling receptor activator activity\"      \n",
+       "[6] \"cytokine activity\"                          \n",
+       "[7] \"growth factor activity\"                     \n",
+       "[8] \"extracellular matrix structural constituent\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "0.235294117647059"
+      ],
+      "text/latex": [
+       "0.235294117647059"
+      ],
+      "text/markdown": [
+       "0.235294117647059"
+      ],
+      "text/plain": [
+       "[1] 0.2352941"
       ]
      },
      "metadata": {},
@@ -370,16 +408,17 @@
    ],
    "source": [
     "n <- 10\n",
-    "# n <- 20\n",
+    "n <- 20\n",
     "figo_topn_lists <- topn_lists(figo_go, n = n)\n",
     "length(figo_topn_lists$topn_union)\n",
     "length(figo_topn_lists$topn_intersect)\n",
+    "figo_topn_lists$topn_intersect\n",
     "length(figo_topn_lists$topn_intersect) / length(figo_topn_lists$topn_union)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "collectible-title",
+   "id": "continent-fighter",
    "metadata": {},
    "source": [
     "# Survival"
@@ -387,7 +426,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "partial-england",
+   "id": "experienced-fossil",
    "metadata": {},
    "source": [
     "## Proportion of total shared by all"
@@ -395,8 +434,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "continent-vermont",
+   "execution_count": 7,
+   "id": "changing-bulgarian",
    "metadata": {},
    "outputs": [
     {
@@ -463,7 +502,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "public-sphere",
+   "id": "numerical-graduation",
    "metadata": {},
    "source": [
     "## Proportion of top n shared by all"
@@ -472,7 +511,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "moderate-devices",
+   "id": "adolescent-sheet",
    "metadata": {},
    "outputs": [
     {
@@ -514,6 +553,24 @@
     {
      "data": {
       "text/html": [
+       "'cytokine activity'"
+      ],
+      "text/latex": [
+       "'cytokine activity'"
+      ],
+      "text/markdown": [
+       "'cytokine activity'"
+      ],
+      "text/plain": [
+       "[1] \"cytokine activity\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
        "0.04"
       ],
       "text/latex": [
@@ -535,13 +592,14 @@
     "survival_topn_lists <- topn_lists(survival_go, n = n)\n",
     "length(survival_topn_lists$topn_union)\n",
     "length(survival_topn_lists$topn_intersect)\n",
+    "survival_topn_lists$topn_intersect\n",
     "length(survival_topn_lists$topn_intersect) / length(survival_topn_lists$topn_union)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "solar-conjunction",
+   "id": "innocent-telephone",
    "metadata": {},
    "outputs": [],
    "source": []
