--- a/meta_analysis/gene_list_overlaps_meta.ipynb
+++ b/meta_analysis/gene_list_overlaps_meta.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "wrapped-backup",
+   "id": "civilian-stereo",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "-- \u001b[1mAttaching packages\u001b[22m ------------------------------------------------------------------ tidyverse 1.3.0 --\n",
+      "-- \u001b[1mAttaching packages\u001b[22m ------------------------------------------------------------------------------- tidyverse 1.3.0 --\n",
       "\n",
       "\u001b[32mv\u001b[39m \u001b[34mggplot2\u001b[39m 3.3.3     \u001b[32mv\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4\n",
       "\u001b[32mv\u001b[39m \u001b[34mtibble \u001b[39m 3.0.6     \u001b[32mv\u001b[39m \u001b[34mdplyr  \u001b[39m 1.0.4\n",
       "\u001b[32mv\u001b[39m \u001b[34mtidyr  \u001b[39m 1.1.2     \u001b[32mv\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
       "\u001b[32mv\u001b[39m \u001b[34mreadr  \u001b[39m 1.4.0     \u001b[32mv\u001b[39m \u001b[34mforcats\u001b[39m 0.5.1\n",
       "\n",
-      "-- \u001b[1mConflicts\u001b[22m --------------------------------------------------------------------- tidyverse_conflicts() --\n",
+      "-- \u001b[1mConflicts\u001b[22m ---------------------------------------------------------------------------------- tidyverse_conflicts() --\n",
       "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
       "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
       "\n"
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "elect-intro",
+   "id": "statewide-threshold",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "marked-mongolia",
+   "id": "false-daughter",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "legitimate-population",
+   "id": "genuine-donor",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "pacific-monaco",
+   "id": "willing-monte",
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m-----------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  Division = \u001b[31mcol_character()\u001b[39m,\n",
       "  Category = \u001b[31mcol_character()\u001b[39m,\n",
@@ -121,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "stock-sauce",
+   "id": "peripheral-things",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "current-estimate",
+   "id": "crude-meditation",
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "known-person",
+   "id": "monetary-latin",
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +275,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "pressing-walter",
+   "id": "imposed-effort",
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +330,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "selective-miami",
+   "id": "hungry-essay",
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +385,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "ambient-sphere",
+   "id": "behavioral-mason",
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "developmental-central",
+   "id": "acquired-terry",
    "metadata": {},
    "outputs": [
     {
@@ -445,7 +445,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "unknown-bradford",
+   "id": "blocked-upper",
    "metadata": {},
    "outputs": [
     {
@@ -475,7 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "emerging-appliance",
+   "id": "polish-compound",
    "metadata": {},
    "outputs": [
     {
@@ -534,7 +534,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "activated-shield",
+   "id": "hispanic-senegal",
    "metadata": {},
    "outputs": [
     {
@@ -593,7 +593,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "raising-approach",
+   "id": "based-budapest",
    "metadata": {},
    "outputs": [
     {
@@ -652,12 +652,77 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "provincial-father",
+   "id": "swiss-robert",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<dl>\n",
+       "\t<dt>$unified_cervical_data</dt>\n",
+       "\t\t<dd>42</dd>\n",
+       "\t<dt>$unified_uterine_data</dt>\n",
+       "\t\t<dd>14</dd>\n",
+       "\t<dt>$unified_uterine_endometrial_data</dt>\n",
+       "\t\t<dd>22</dd>\n",
+       "</dl>\n"
+      ],
+      "text/latex": [
+       "\\begin{description}\n",
+       "\\item[\\$unified\\_cervical\\_data] 42\n",
+       "\\item[\\$unified\\_uterine\\_data] 14\n",
+       "\\item[\\$unified\\_uterine\\_endometrial\\_data] 22\n",
+       "\\end{description}\n"
+      ],
+      "text/markdown": [
+       "$unified_cervical_data\n",
+       ":   42\n",
+       "$unified_uterine_data\n",
+       ":   14\n",
+       "$unified_uterine_endometrial_data\n",
+       ":   22\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "$unified_cervical_data\n",
+       "[1] 42\n",
+       "\n",
+       "$unified_uterine_data\n",
+       "[1] 14\n",
+       "\n",
+       "$unified_uterine_endometrial_data\n",
+       "[1] 22\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "figo_umsmg_demg_lists <- mapply(intersect, figo_umsmg_lists, demg_lists)\n",
+    "figo_nsmg_demg_lists <- mapply(intersect, figo_nsmg_lists, demg_lists)\n",
+    "figo_demg_umsmg_nsmg_overlap <- mapply(intersect, figo_umsmg_demg_lists, figo_nsmg_demg_lists)\n",
+    "figo_demg_umsmg_nsmg_overlap %>% map(length)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "uniform-threshold",
    "metadata": {},
    "outputs": [],
    "source": [
     "if (save_results) {\n",
     "    # FIGO sig\n",
+    "    figo_umsmg_demg_lists$unified_cervical_data %>% write_lines(paste0(dirs$analysis_dir, \"/gene_lists_extra/cesc_figo_umsmg_demg.txt\"))\n",
+    "    figo_umsmg_demg_lists$unified_uterine_data %>% write_lines(paste0(dirs$analysis_dir, \"/gene_lists_extra/ucec_figo_umsmg_demg.txt\")) \n",
+    "    figo_umsmg_demg_lists$unified_uterine_endometrial_data %>% write_lines(paste0(dirs$analysis_dir, \"/gene_lists_extra/ucs_figo_umsmg_demg.txt\")) \n",
+    "    \n",
+    "    figo_nsmg_demg_lists$unified_cervical_data %>% write_lines(paste0(dirs$analysis_dir, \"/gene_lists_extra/cesc_figo_nsmg_demg.txt\"))\n",
+    "    figo_nsmg_demg_lists$unified_uterine_data %>% write_lines(paste0(dirs$analysis_dir, \"/gene_lists_extra/ucec_figo_nsmg_demg.txt\")) \n",
+    "    figo_nsmg_demg_lists$unified_uterine_endometrial_data %>% write_lines(paste0(dirs$analysis_dir, \"/gene_lists_extra/ucs_figo_nsmg_demg.txt\"))\n",
+    "    \n",
     "    figo_sig_lists$unified_cervical_data %>% write_lines(paste0(dirs$analysis_dir, \"/gene_lists_extra/cesc_figo_demg.txt\"))\n",
     "    figo_sig_lists$unified_uterine_data %>% write_lines(paste0(dirs$analysis_dir, \"/gene_lists_extra/ucs_figo_demg.txt\"))\n",
     "    figo_sig_lists$unified_uterine_endometrial_data %>% write_lines(paste0(dirs$analysis_dir, \"/gene_lists_extra/ucec_figo_demg.txt\"))\n",
@@ -681,7 +746,7 @@
     "    # DEMG pairs\n",
     "    demg_all_pairs_list$cesc_ucs %>% write_lines(paste0(dirs$analysis_dir, \"/gene_lists_extra/cesc_ucs_demg.txt\"))\n",
     "    demg_all_pairs_list$cesc_ucec %>% write_lines(paste0(dirs$analysis_dir, \"/gene_lists_extra/cesc_ucec_demg.txt\"))\n",
-    "    demg_all_pairs_list$ucs_ucec %>% write_lines(paste0(dirs$analysis_dir, \"/gene_lists_extra/ucec_ucs_demg.txt\"))\n",
+    "    demg_all_pairs_list$ucec_ucs %>% write_lines(paste0(dirs$analysis_dir, \"/gene_lists_extra/ucec_ucs_demg.txt\"))\n",
     "    \n",
     "    # FIGO pairs\n",
     "    figo_all_pairs$cesc_ucs %>% write_lines(paste0(dirs$analysis_dir, \"/gene_lists_extra/cesc_ucs_figo_demg.txt\"))\n",
@@ -696,12 +761,160 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "peripheral-operations",
+   "cell_type": "markdown",
+   "id": "occupied-influence",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Quick numbers for figures"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "latin-heavy",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "839"
+      ],
+      "text/latex": [
+       "839"
+      ],
+      "text/markdown": [
+       "839"
+      ],
+      "text/plain": [
+       "[1] 839"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "476"
+      ],
+      "text/latex": [
+       "476"
+      ],
+      "text/markdown": [
+       "476"
+      ],
+      "text/plain": [
+       "[1] 476"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "76"
+      ],
+      "text/latex": [
+       "76"
+      ],
+      "text/markdown": [
+       "76"
+      ],
+      "text/plain": [
+       "[1] 76"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "Reduce(union, demg_lists) %>% length()\n",
+    "Reduce(union, figo_sig_lists) %>% length()\n",
+    "Reduce(union, survival_sig_lists) %>% length()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "smooth-blast",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "825"
+      ],
+      "text/latex": [
+       "825"
+      ],
+      "text/markdown": [
+       "825"
+      ],
+      "text/plain": [
+       "[1] 825"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "748"
+      ],
+      "text/latex": [
+       "748"
+      ],
+      "text/markdown": [
+       "748"
+      ],
+      "text/plain": [
+       "[1] 748"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "720"
+      ],
+      "text/latex": [
+       "720"
+      ],
+      "text/markdown": [
+       "720"
+      ],
+      "text/plain": [
+       "[1] 720"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# CESC\n",
+    "Reduce(\n",
+    "    union,\n",
+    "    list(demg_lists$unified_cervical_data, union(figo_umsmg_lists$unified_cervical_data, figo_nsmg_lists$unified_cervical_data), survival_lists$unified_cervical_data),\n",
+    ") %>% length()\n",
+    "\n",
+    "# UCEC\n",
+    "Reduce(\n",
+    "    union,\n",
+    "    list(demg_lists$unified_uterine_endometrial_data, union(figo_umsmg_lists$unified_uterine_endometrial_data, figo_nsmg_lists$unified_uterine_endometrial_data), survival_lists$unified_uterine_endometrial_data),\n",
+    ") %>% length()\n",
+    "\n",
+    "# UCS\n",
+    "Reduce(\n",
+    "    union,\n",
+    "    list(demg_lists$unified_uterine_data, union(figo_umsmg_lists$unified_uterine_data, figo_nsmg_lists$unified_uterine_data), survival_lists$unified_uterine_data),\n",
+    ") %>% length()"
+   ]
   }
  ],
  "metadata": {
