--- a/meta_analysis/network_meta.ipynb
+++ b/meta_analysis/network_meta.ipynb
@@ -3,26 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "present-luxury",
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "id": "generic-mortgage",
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "-- \u001b[1mAttaching packages\u001b[22m ---------------------------------------------------------------------- tidyverse 1.3.0 --\n",
+      "-- \u001b[1mAttaching packages\u001b[22m ------------------------------------------------------------------------------- tidyverse 1.3.0 --\n",
       "\n",
       "\u001b[32mv\u001b[39m \u001b[34mggplot2\u001b[39m 3.3.3     \u001b[32mv\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4\n",
       "\u001b[32mv\u001b[39m \u001b[34mtibble \u001b[39m 3.0.6     \u001b[32mv\u001b[39m \u001b[34mdplyr  \u001b[39m 1.0.4\n",
       "\u001b[32mv\u001b[39m \u001b[34mtidyr  \u001b[39m 1.1.2     \u001b[32mv\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
       "\u001b[32mv\u001b[39m \u001b[34mreadr  \u001b[39m 1.4.0     \u001b[32mv\u001b[39m \u001b[34mforcats\u001b[39m 0.5.1\n",
       "\n",
-      "-- \u001b[1mConflicts\u001b[22m ------------------------------------------------------------------------- tidyverse_conflicts() --\n",
+      "-- \u001b[1mConflicts\u001b[22m ---------------------------------------------------------------------------------- tidyverse_conflicts() --\n",
       "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
       "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
       "\n",
@@ -89,12 +84,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "premium-psychology",
+   "id": "provincial-workplace",
    "metadata": {},
    "outputs": [],
    "source": [
     "dirs <- rutils::get_dev_directories(dev_paths_file = \"../dev_paths.txt\")\n",
     "unified_dsets <- c(\"unified_cervical_data\", \"unified_uterine_data\", \"unified_uterine_endometrial_data\")\n",
+    "projects <- c(\"cesc\", \"ucs\", \"ucec\")\n",
     "matrisome_path <- paste0(dirs$data_dir, \"/matrisome/matrisome_hs_masterlist.tsv\")\n",
     "\n",
     "event_code <- list(\"Alive\" = 0, \"Dead\" = 1)"
@@ -102,29 +98,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "id": "contained-dayton",
+   "execution_count": 3,
+   "id": "satisfactory-console",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dset_idx <- 3"
+    "dset_idx <- 3\n",
+    "p_mm_thresh <- 0.05\n",
+    "q_me_thresh <- 0.05\n",
+    "save_results <- TRUE"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "id": "psychological-testament",
+   "execution_count": 4,
+   "id": "valuable-works",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "cols(\n",
+      "  .default = col_double(),\n",
+      "  geneID = \u001b[31mcol_character()\u001b[39m,\n",
+      "  module = \u001b[31mcol_character()\u001b[39m\n",
+      ")\n",
+      "\u001b[36mi\u001b[39m Use \u001b[30m\u001b[47m\u001b[30m\u001b[47m`spec()`\u001b[47m\u001b[30m\u001b[49m\u001b[39m for the full column specifications.\n",
+      "\n",
+      "\n",
+      "\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "cols(\n",
+      "  module = \u001b[31mcol_character()\u001b[39m,\n",
+      "  figo_stage_1_cor = \u001b[32mcol_double()\u001b[39m,\n",
+      "  figo_stage_2_cor = \u001b[32mcol_double()\u001b[39m,\n",
+      "  figo_stage_3_cor = \u001b[32mcol_double()\u001b[39m,\n",
+      "  figo_stage_4_cor = \u001b[32mcol_double()\u001b[39m,\n",
+      "  figo_stage_1_pval = \u001b[32mcol_double()\u001b[39m,\n",
+      "  figo_stage_2_pval = \u001b[32mcol_double()\u001b[39m,\n",
+      "  figo_stage_3_pval = \u001b[32mcol_double()\u001b[39m,\n",
+      "  figo_stage_4_pval = \u001b[32mcol_double()\u001b[39m,\n",
+      "  figo_stage_1_qval = \u001b[32mcol_double()\u001b[39m,\n",
+      "  figo_stage_2_qval = \u001b[32mcol_double()\u001b[39m,\n",
+      "  figo_stage_3_qval = \u001b[32mcol_double()\u001b[39m,\n",
+      "  figo_stage_4_qval = \u001b[32mcol_double()\u001b[39m,\n",
+      "  vital_hr = \u001b[32mcol_double()\u001b[39m,\n",
+      "  vital_dev_cor = \u001b[32mcol_double()\u001b[39m,\n",
+      "  vital_pval = \u001b[32mcol_double()\u001b[39m,\n",
+      "  vital_qval = \u001b[32mcol_double()\u001b[39m\n",
+      ")\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
+    "network_mm_gs_df <- read_tsv(paste0(dirs$analysis_dir, \"/network/\", unified_dsets[dset_idx], \"_gene_mm_gs.tsv\"))\n",
+    "network_me_sig_df <- read_tsv(paste0(dirs$analysis_dir, \"/network/\", unified_dsets[dset_idx], \"_eigengene_traits.tsv\"))\n",
+    "demg_list <- read_lines(paste0(dirs$analysis_dir, \"/gene_lists/\", unified_dsets[dset_idx], \"_demg_list.txt\"))\n",
+    "\n",
     "lnames <- load(file = paste0(dirs$data_dir, \"/saved_network_objects/\", unified_dsets[dset_idx], \"_tumor_data.RData\"))\n",
     "lnames <- load(file = paste0(dirs$data_dir, \"/saved_network_objects/\", unified_dsets[dset_idx], \"_tumor_network.RData\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "id": "greater-folder",
+   "execution_count": 5,
+   "id": "respective-newfoundland",
    "metadata": {},
    "outputs": [
     {
@@ -251,16 +294,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "suspected-transsexual",
+   "execution_count": 6,
+   "id": "understanding-bishop",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "wgcna_meta_ls <- wgcna_meta(network_me_sig_df, network_mm_gs_df, q_me_thresh, p_mm_thresh, colnames(data_expr))\n",
+    "wgcna_meta_ls[[\"demg_genes\"]] <- wgcna_meta_ls$genes %>% intersect(demg_list)\n",
+    "wgcna_meta_ls[[\"n_sig_demg_genes\"]] <- wgcna_meta_ls$demg_genes %>% length()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "outdoor-institution",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       ".list-inline {list-style: none; margin:0; padding: 0}\n",
+       ".list-inline>li {display: inline-block}\n",
+       ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
+       "</style>\n",
+       "<ol class=list-inline><li>'green'</li><li>'pink'</li><li>'salmon'</li><li>'black'</li></ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item 'green'\n",
+       "\\item 'pink'\n",
+       "\\item 'salmon'\n",
+       "\\item 'black'\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. 'green'\n",
+       "2. 'pink'\n",
+       "3. 'salmon'\n",
+       "4. 'black'\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[1] \"green\"  \"pink\"   \"salmon\" \"black\" "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "wgcna_meta_ls$modules"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "forward-philadelphia",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for (m in wgcna_meta_ls$modules) {\n",
+    "    module_genes <- network_mm_gs_df %>%\n",
+    "        select(geneID, module) %>%\n",
+    "        filter(geneID %in% wgcna_meta_ls$demg_genes) %>%\n",
+    "        filter(module == m) %>%\n",
+    "        arrange(geneID) %>%\n",
+    "        pull(geneID)\n",
+    "    if (save_results) {\n",
+    "        module_genes %>% write_lines(paste0(dirs$analysis_dir, \"/gene_lists_extra_network/\", unified_dsets[dset_idx], \"_\", m, \"_demg.txt\"))\n",
+    "    }\n",
+    "}"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "manual-experiment",
+   "id": "provincial-comparative",
    "metadata": {},
    "outputs": [],
    "source": []
